--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ p {
     border-radius: 6px;
     background-color: #2adf26;
     color: #fff !important;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 .logo {
@@ -52,6 +55,13 @@ p {
 
 .hero-section {
     height: calc(100vh - 90px);
+}
+
+.sub-hero {
+    height: 300px;
+    background-image: linear-gradient(#2d332a79, #3f443a9f), url(./assets/img/matrice-matrix-monitor-multi-wallpaper-thumb.jpg);
+    background-position: center;
+    background-size: cover;
 }
 
 .video-container {
@@ -92,9 +102,7 @@ p {
 
 .content h1 span {
     display: inline-block;
-    background-color: #2adf2662;
-    padding: 5px;
-    border-radius: 50px;
+
     font-weight: 600;
 }
 
@@ -258,6 +266,106 @@ p {
     color: #2adf26;
 }
 
+.auth-section {
+    padding: 100px 0;
+    margin-top: -250px;
+}
+
+.auth-box {
+    filter: drop-shadow(0px 1px 1px rgba(0, 0, 0, 0.15));
+    box-shadow: 0 0 1rem 0 rgba(156, 167, 180, 0.20);
+    padding: 35px 40px;
+    background-color: #fff;
+    border-radius: 8px;
+}
+
+.auth-box-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 10px;
+    padding-bottom: 15px;
+}
+
+.auth-box-title img {
+    width: 40%;
+}
+
+.auth-box-title h2 {
+    color: #2adf26;
+    font-size: 34px;
+    font-weight: 700;
+    text-align: right;
+}
+
+.auth-box-title .icon-box {
+    width: 50px;
+    height: 50px;
+    background-color: #f7f7f7;
+    border-radius: 50px;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: #5c5c5c;
+}
+
+.auth-box-title .icon-box svg {
+    width: 25px;
+}
+
+.auth-form {
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.auth-form label {
+    display: block;
+    font-size: 14px;
+    color: #5c5c5c;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.auth-form input {
+    width: 100%;
+    outline: none;
+    background-color: transparent;
+    padding: 9px 10px;
+    border-radius: 6px;
+    border: 1px solid #dddddc;
+}
+
+.auth-footer {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.auth-footer button {
+    padding: 10px 25px !important;
+    border-radius: 6px;
+    background-color: #2adf26;
+    color: #fff !important;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.auth-footer a {
+    font-size: 16px;
+    color: #5c5c5c;
+}
+
+.error-message {
+    color: rgb(212, 17, 27);
+}
+
 @media only screen and (max-width: 768px) and (min-width: 200px) {
     .main-header {
         padding: 10px;
@@ -324,4 +432,19 @@ p {
         height: 40vh;
     }
 
+    .auth-section {
+        padding: 50px 0;
+    }
+
+    .auth-box {
+        padding: 20px;
+    }
+
+    .auth-box-title {
+        padding-bottom: 8px;
+    }
+
+    .auth-box-title h2 {
+        font-size: 24px;
+    }
 }
